--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AA DIGITAL HUB</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+        <link rel="shortcut icon" href="https://media-mct1-1.cdn.whatsapp.net/v/t61.24694-24/491884169_731719852558864_382214816754430343_n.jpg?ccb=11-4&oh=01_Q5Aa1wEi78DnDk5YMX1pU7MkklXGgrTCF1tp7F7V2-OEKNxe9A&oe=686C3EC3&_nc_sid=5e03e0&_nc_cat=102" type="image/x-icon">
+
+<style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
